--- a/Exercise1/Exercise1.csproj
+++ b/Exercise1/Exercise1.csproj
@@ -9,4 +9,8 @@
     <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="dao\" />
+  </ItemGroup>
+
 </Project>
